syntax = "proto3";
package airblogs.airblogs;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "airblogs/x/airblogs/types";

// Msg defines the Msg service.
service Msg {
      rpc Postblog(MsgPostblog) returns (MsgPostblogResponse);
  rpc Post(MsgPost) returns (MsgPostResponse);
  rpc CreateComment(MsgCreateComment) returns (MsgCreateCommentResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgPostblog {
  string creator = 1;
  string title = 2;
  string imgurl = 3;
  string body = 4;
}

message MsgPostblogResponse {
}

message MsgPost {
  string creator = 1;
  string title = 2;
  string imgurl = 3;
  string body = 4;
}

message MsgPostResponse {
  uint64 id = 1;
}

message MsgCreateComment {
  string creator = 1;
  uint64 postID = 2;
  string title = 3;
  string body = 4;
  uint64 id = 5;
}

message MsgCreateCommentResponse {
    uint64 id = 1;
}

// this line is used by starport scaffolding # proto/tx/message